# django_test_pj

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: main.yml
monitoring/: loki-config.yaml  promtail-config.yaml
study/: simple-test.html  test-chat.html
study/api/: tasks.py  urls.py
study/api/serializers/course/: get.py
study/api/serializers/enrollment/: get.py
study/api/serializers/student/: get.py
study/api/services/enrollments/: get.py
study/api/services/students/: get.py  list_filter.py  post.py
study/api/tests/: test_enrollments.py  test_student.py
study/api/views/: course.py  enrollments.py  student.py  students.py
study/conf/: asgi.py  celery.py  consumers.py  routing.py  settings.py  urls.py  yasg.py
study/db/migrations/: 0001_initial.py  0002_course_enrollment_worktime.py  0003_student_usermame.py  0004_alter_student_usermame.py  0005_alter_student_usermame.py  0006_remove_student_usermame_alter_student_username.py  0007_alter_enrollment_table.py  0008_alter_student_table.py  0009_alter_student_email_alter_student_username.py
study/db/models/: __init__.py  course.py  enrollment.py  manager.py  student.py  work_time.py
study/management/commands/: daphne.py
study/permissions/: is_author.py
study/utils/: cache.py  logging_config.py  middleware.py  pagination.py  swagger_schema_docs.py
