[project]
name = "django-test-pj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.6",
    "django-environ>=0.12.0",
    "django-service-objects>=0.7.1",
    "djangorestframework>=3.16.1",
    "pre-commit>=4.3.0",
    "psycopg2-binary>=2.9.10",
    "ruff>=0.14.0",
]
